--- a/Objects.tex
+++ b/Objects.tex
@@ -64,7 +64,7 @@ Based on the information used from the various CMS subdetectors for the jet clus
 \begin{description}
  \item \textbf{Calorimeter (Calo) jets:} Calo jets are clustered from energy deposits in the calorimeters. For this purpose, calorimeter towers are defined which consist of at least one HCAL cell and the geometrically associated ECAL cells. For instance in case of the barrel detector region, a calorimeter tower consists of one HCAL cell and $\mathrm{5 \times 5}$ ECAL cells. The four-momentum of each tower is defined by the tower position as seen from the primary interaction vertex and the energy deposit in the tower above a certain threshold assuming a mass of zero. 
  \item \textbf{Jet-Plus-Track (JPT) jets:} JPT jets are reconstructed from calorimeter jets complemented by tracking information~\cite{CMS-PAS-JME-09-002}. Tracks of charged particles can be associated to calo jets based on the separation of the jet axis and the momentum vector of the track in the $(\eta,\phi)$-plane. Associated tracks are projected to the jet cone and are exploited to correct the jet energy and direction. 
- \item \textbf{Particle-Flow (PF) jets:} PF jets are clustered from the four-momentum vectors of Particle-Flow candidates as identified by the PF algorithm described in Sec.~\ref{sec:pf_algo}. Typically, these types of jets show the best performance as the excellent resolution of the tracking system and the ECAL are utilized. Only neutral hadrons which constitute around 15\% of the jet energy (cf. Fig.~\ref{fig:jets_pf_comp}) rely on the energy measurement of the HCAL with its relatively poor resolution. Thus, PF jets are the default jets to be used at the CMS experiment as it is done within this thesis. In order to mitigate influences from pileup, charged hadrons unambigously associated to vertices other than the primary vertex can be removed from the jet algorithm input list before the actual jet clustering is performed. This technique is referred to as \textit{charged-hadron subtraction} (CHS) and used as default throughout this thesis. 
+ \item \textbf{Particle-Flow (PF) jets:} PF jets are clustered from the four-momentum vectors of Particle-Flow candidates as identified by the PF algorithm described in Sec.~\ref{sec:pf_algo}. Typically, these types of jets show the best performance as the excellent resolution of the tracking system and the ECAL are utilized. Only neutral hadrons which constitute around 15\% of the jet energy (cf. Fig.~\ref{fig:jets_pf_comp}) rely on the energy measurement of the HCAL with its relatively poor resolution. Thus, PF jets are the default jets to be used at the CMS experiment as it is done within this thesis. In order to mitigate influences from pileup, charged hadrons unambigously associated to vertices other than the primary vertex can be removed from the jet algorithm input list before the actual jet clustering is performed. This technique is referred to as \textit{charged-hadron subtraction} (CHS) and used as default throughout this thesis. The respective jets are denoted PFCHS jets.
 \end{description}
 
 \subsection{Jet Transverse-Momentum Response}
