--- a/Detector.tex
+++ b/Detector.tex
@@ -113,7 +113,7 @@ which improves with increasing energy $E$ of the measured particle. At low momen
 
 \subsubsection*{Electromagnetic Calorimeter}
 \label{subsec:cms_ecal}
-The CMS experiment makes use of a homogeneous electromagnetic calorimeter (ECAL), in order to precisely measure the energy deposits of electrons and photons. It is installed around the inner tracking system covering a range up to $|\eta| = 3.0$ and consists of lead tungstate (PbW$\mathrm{O}_4$) crystals. These have been chosen as they provide a high density, short radiation length\footnote{The radiation length corresponds to the mean distance after which an electron traversing a material has lost all but $1/e$ of its energy.} $X_0$ and a small Moli\`{e}re radius\footnote{The Moli\`{e}re radius corresponds to the radius of a cylinder containing on average 90\% of the energy deposition of an electromagnetic shower.} $R_m$ and hence allow to build a compact calorimeter with a fine granularity. As 80\% of the scintillation light is emitted within 25\,ns, this allows ECAL operation at the bunch crossing rate of the LHC machine. In order to collect the radiated light, photodiodes are glued to the back of each crystal.\\
+The CMS experiment makes use of a homogeneous electromagnetic calorimeter (ECAL), in order to precisely measure the energy deposits of electrons and photons. It is installed around the inner tracking system covering a range up to $|\eta| = 3.0$ and consists of lead tungstate (PbW$\mathrm{O}_4$) crystals. These have been chosen as they provide a high density, short radiation length\footnote{The radiation length corresponds to the mean distance after which an electron traversing a material has lost all but $1/e$ of its energy.} $X_0$ and a small Moli\`{e}re radius\footnote{The Moli\`{e}re radius corresponds to the radius of a cylinder containing on average 90\% of the energy deposition of an electromagnetic shower.} $R_m$ and hence allow to build a compact calorimeter with a fine granularity. As 80\% of the scintillation light is emitted within 25\,ns, this allows ECAL operation at the bunch-crossing rate of the LHC machine. In order to collect the radiated light, photodiodes are glued to the back of each crystal.\\
 An overview of the ECAL layout is shown in Fig.~\ref{fig:CMS_ecal}. The individual sub-components are as follows:
 \begin{figure}[!tp]
   \centering
@@ -178,13 +178,13 @@ Three different types of gaseous detectors are used to achieve a good muon momen
 \begin{description}
  \item \textbf{Drift tube (DT) chambers:} In the barrel region for $|\eta| < 1.2$, the background due to neutrons is low and likewise residual effects from the magnetic field. Here, the muon system is equipped with drift tube chambers. In the barrel, the muon coordinates in the $r\phi$-plane are measured in four stations while only the first three layers provide also a measurement of the $z$-direction. The drift length is restricted to a maximum of 21\,mm resulting in a negligible occupancy while keeping the number of channels at an acceptable level. Furthermore, a technology based on tubes is chosen avoiding the issue of possibly broken wires. The resolution in $r\phi$ is designed to reach a precision of 100\,\textmu m.
  \item \textbf{Cathode strip chambers (CSC):} The endcap regions are equipped with cathode strip chambers and cover the pseudorapidity range $0.9 < |\eta| < 2.4$. These provide a fast response time and fine segmentation while they are resistant against radiation. Thus, they are well suited for the forward region where the muon and background rates are largely increased and the magnetic field is high and non-uniform. The CSCs, which are multiwire proportional chambers in which anode wires are interlaced with cathode panels, perform a precise position measurement in the $r\phi$--plane with a spatial resolution of 75--150\,\textmu m. 
- \item \textbf{Resistive plate chambers (RPC):} Resistive plate chambers are used to complement the drift tube and cathode strip chambers in the range $|\eta| < 1.6$. These are gaseous parallel-plate detectors with a spatial resolution coarser than the DTs and CSCs. However, they provide a very fast response and good time resolution at high particle rates. Thus, they are able to very efficiently detect the bunch-crossing a muon track is associated to. 
+ \item \textbf{Resistive plate chambers (RPC):} Resistive plate chambers are used to complement the drift tube and cathode strip chambers in the range $|\eta| < 1.6$. These are gaseous parallel-plate detectors with a spatial resolution coarser than the DTs and CSCs. However, they provide a very fast response and good time resolution at high particle rates. Thus, they are able to very efficiently detect the bunch crossing a muon track is associated to. 
 \end{description}
 The global muon reconstruction efficiency is in general about 95--99\% and only drops for some $|\eta|$ regions, \eg in the transition region between the barrel and endcap part around $|\eta|=1.2$. Since muons reaching the muon system are affected by multiple scattering and radiation losses in the material, the resolution for muons with transverse momenta below $\approx$ 200\gev is in general better based on the inner tracking system than for the muon system. However, at higher transverse momenta the track-curvature measurement in the inner tracking system is limited and thus a combination with the measurement in the muon system is beneficial because of the longer lever arm. In general, the muon momentum resolution can be improved by combining the information from the inner tracker and the muon system due to an improved fault finding. This combined approach results in a relative muon momentum resolution for muons with high momenta around 1\tev of about 5\%.
 
 \subsection{Trigger System}
 \label{subsec:cms_trigger}
-The LHC operating at design conditions provides particle collisions with a bunch crossing rate of 40\,MHz. This results in an enormous amount of event data which have to be processed and stored for later analyses. With an approximate event size of 1\,MB, it is technically impossible to record all events. However, as illustrated in Fig.~\ref{fig:CrossSections}, the event rate of interesting events is orders of magnitudes smaller than the total inelastic proton-proton cross section. Thus, already in the trigger system a fast event preselection is performed that allows to reduce the amount of data to a storable size while still retaining the information of interest. Hence, the trigger system makes up the first step in the physics analysis process. In order to achieve the necessary rate reduction, the CMS experiment uses a two-stage trigger system:
+The LHC operating at design conditions provides particle collisions with a bunch-crossing rate of 40\,MHz. This results in an enormous amount of event data which have to be processed and stored for later analyses. With an approximate event size of 1\,MB, it is technically impossible to record all events. However, as illustrated in Fig.~\ref{fig:CrossSections}, the event rate of interesting events is orders of magnitudes smaller than the total inelastic proton-proton cross section. Thus, already in the trigger system a fast event preselection is performed that allows to reduce the amount of data to a storable size while still retaining the information of interest. Hence, the trigger system makes up the first step in the physics analysis process. In order to achieve the necessary rate reduction, the CMS experiment uses a two-stage trigger system:
 \begin{description}
 \item \textbf{Level-1 (L1) trigger:} The L1 trigger consists of custom-made fast programmable hardware. It makes use of data received from fast detector components which are the calorimeters and the muon system at reduced granularity. For that purpose, the calorimeter is divided into so-called \textit{trigger towers} which cover an area in $(\eta, \phi)$ of $(0.087, 0.087)$ up to $|\eta| = 1.74$ getting even coarser for higher $|\eta|$. At L1, the trigger decision is based on energy deposits in those trigger towers or certain hit patterns in the muon chambers forming trigger primitive objects which are electrons/photons, muons or jets and global quantities like sums of \et or \met. Events are accepted if those trigger objects pass some predefined criteria, like for instance certain \pt thresholds. The L1 trigger latency, \ie the time between the actual bunch crossing and the delivery of a positive L1 trigger decision to the front-end electronics, is 3.2\,\textmu s. During this period, the high resolution data is pipelined in readout buffers for further processing. The L1 trigger reduces the event rate to a maximum of 100\,kHz.
 \item \textbf{High-Level trigger (HLT):} Events that are accepted by the L1 trigger stage are transferred to the High-Level trigger for further processing. The HLT is a software system running on several thousand commercial processors. It has access to the full information from all sub-detectors and performs an event reconstruction similar to the later event reconstruction performed for recorded data. Thus, it allows a further rate reduction to the final output rate of a few hundred Hz of events that are finally stored for analyses. Since the HLT is software based, it allows to continously adjust the used algorithms in order to adapt to changing conditions during operation.
@@ -211,7 +211,7 @@ In the following running period in 2010, data corresponding to an integrated lum
   \caption{Mean number of interactions per bunch crossing in \pp collisions at a centre-of-mass energy of $\sqrt{s} = 8$\tev~\cite{bib:lhc:lumi12}.}
   \label{fig:lhc_pileup}
 \end{figure}
-In general, such conditions result in multiple interactions per bunch crossing known as \textit{pileup} (PU). Typically, two sources of pileup are distinguished: \textit{in-time} pileup (IT PU) and \textit{out-of-time} pileup (OOT PU). While IT PU is caused by additional \pp collisions occuring within the same bunch-crossing as the primary hard collision and leads to additional tracks in the tracking system and energy deposits in the calorimeters, OOT PU arises from \pp collisions in previous and following bunch crossings and contributes further energy deposits in the calorimeters to the hard interaction due to the finite signal decay time in the calorimeters. An overview of the pileup profile in collision data taken in 2012 is given in Fig.~\ref{fig:lhc_pileup}. Here, the mean number of interactions per bunch crossing is illustrated with the mean of this distribution located at 21. Dedicated techniques in order to mitigate effects from pileup are employed in the CMS experiment. Some of these are discussed in Chap.~\ref{chap:Objects}.
+In general, such conditions result in multiple interactions per bunch crossing known as \textit{pileup} (PU). Typically, two sources of pileup are distinguished: \textit{in-time} pileup (IT PU) and \textit{out-of-time} pileup (OOT PU). While IT PU is caused by additional \pp collisions occuring within the same bunch crossing as the primary hard collision and leads to additional tracks in the tracking system and energy deposits in the calorimeters, OOT PU arises from \pp collisions in previous and following bunch crossings and contributes further energy deposits in the calorimeters to the hard interaction due to the finite signal decay time in the calorimeters. An overview of the pileup profile in collision data taken in 2012 is given in Fig.~\ref{fig:lhc_pileup}. Here, the mean number of interactions per bunch crossing is illustrated with the mean of this distribution located at 21. Dedicated techniques in order to mitigate effects from pileup are employed in the CMS experiment. Some of these are discussed in Chap.~\ref{chap:Objects}.
 
 
 
