--- a/RA2.tex
+++ b/RA2.tex
@@ -817,4 +817,4 @@ However, as discussed in Sec.~\ref{subsec:mssm}, especially the supersymmetric p
 \end{figure}
 \\
 Here, top squarks with masses between 200--750\gev have been excluded for LSP masses below around 200\gev. This corresponds to a generic tuning (as introduced in Sec.~\ref{subsec:natural_susy}) of $\Delta \lesssim 20$. Although this exceeds the traditional value of $\Delta \lesssim 10$ already, values up to $\Delta \lesssim 100$ are often considered acceptable to date~\cite{Craig:2013cxa}. Consequently, a top squark mass up to around 1\tev is considered eligible and a wide range of the parameter space is still not investigated. Since the LHC starts a second run period in 2015 with an increased centre-of-mass energy of $\sqrt{s} = 13$\tev, this mass region up to 1\tev can be further studied.\\
-A feasibility study to search for direct top squark pair production at $\sqrt{s} = 13$\tev is presented in the next chapter based on simulated events. Here, also techniques to identify boosted hadronically decaying top quarks, as introduced in Chap.~\ref{chap:Objects}, emerging from the top squark decays, are employed.
+A feasibility study to search for direct top squark pair production at $\sqrt{s} = 13$\tev is presented in the next chapter based on simulated events. Here, also techniques to identify boosted hadronically decaying top quarks, as introduced in Chap.~\ref{chap:Objects}, emerging from the top squark decays are employed.
