--- a/Thesis.bib
+++ b/Thesis.bib
@@ -2734,9 +2734,9 @@ primaryClass   = "hep-ph"
 @article{JOtt,
   author = "J.~Ott",
   title = "",
-  note = "private communication",
+  note = "private communication (2014)",
   journal = "",
-  year = {2014}
+  year = ""
 }
 
 @misc{MSchrode,
